--- a/.github/codeql/codeql-config.yml
+++ b/.github/codeql/codeql-config.yml
@@ -1,1 +1,25 @@
+name: "AION-BRAIN Research Configuration"
 
+paths:
+  - "engines/tier-1-foundation/**/*.py"
+  - "engines/tier-2-cognitive/**/*.py"
+  - "tools/**/*.py"
+
+paths-ignore:
+  - "**/*.md"
+  - "**/*.txt"
+  - "**/*.json"
+  - "**/*.yml"
+  - "**/*.yaml"
+  - "**/tests/**"
+  - "**/test_*.py"
+  - "**/*_test.py"
+  - "**/examples/**"
+  - "**/benchmarks/**"
+  - "**/legal/**"
+  - "**/assessments/**"
+  - "**/docs/**"
+  - "**/.github/**"
+
+queries:
+  - uses: security-and-quality
